# auto-horoscope

./: Dockerfile  README.md  config.yml  docker-compose.yml  horoscope.py  main.py  pyproject.toml
app/: app.py  injector.py  main.py
app/config/: logging_conf.py  messages.yaml
app/domain/: container.py  horoscope.py  io.py  planet.py  schema.py  sign.py
app/domain/infra/: repository.py
app/exceptions/: exception.py
app/infra/: repository.py
app/injector/: injector.py  module.py
app/presentation/: controller.py  endpoint.py  request.py  response.py  router.py
app/usecase/: assign_sign_usecase.py  astrology_usecase.py  desc_usecase.py  fetch_desc_usecase.py  horoscope_usecase.py  house_usecase.py  planet_usecase.py  sign_usecase.py  time_usecase.py  timezone_usecase.py  usecase.py
data/: desc_sign.csv
docs/source/: conf.py  index.rst
docs/source/resources/: app.config.rst  app.domain.infra.rst  app.domain.rst  app.exceptions.rst  app.infra.rst  app.injector.rst  app.presentation.rst  app.rst  app.usecase.rst
tests/presentation/: test_controller.py
