[tool.poetry]
name = "auto-horoscope"
version = "0.1.0"
description = ""
authors = ["Mamoru Matsunaga <pineb1ue10ngtree@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astropy = "^6.0.0"
black = "^23.11.0"
isort = "^5.12.0"
pyswisseph = "^2.10.3.2"
pytz = "^2023.3.post1"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"
line-length = 120
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]